manifests/immich/immich-traefik-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: immich
  namespace: immich

spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - immich.k8s.harish2k01.xyz

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: immich-server
          port: 2283
